--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>GENESIS PEREZ PEREZ | Portfolio</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="libs/bootstrap.min.css">
+    <link rel="stylesheet" href="/landing-page/libs/bootstrap.min.css">
     <!-- LESS CSS -->
-    <link rel="stylesheet/less" type="text/css" href="less/theme.less">
+    <link rel="stylesheet/less" type="text/css" href="/landing-page/less/theme.less">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -42,7 +42,7 @@
 
     <!-- profile Section -->
     <section class="profile">
-        <img src="/images/photo.jpg" alt="Genesis Perez P" class="profile-image">
+        <img src="/landing-page/images/photo.jpg" alt="Genesis Perez P" class="profile-image">
         <h1>GENESIS PEREZ PEREZ</h1>
         <h2 class="tagline">FRONT END DEVELOPER</h2>
 		<div class="header-contact">
