--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/millersmotorsports/" target="_blank" class="social-instagram" title="Instagram Genesis">
+                <a href="https://www.instagram.com/genesis_p_p/" target="_blank" class="social-instagram" title="Instagram Genesis">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                     <span class="sr-only">Folto know me!!</span>
                 </a>
