--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div id="homepage" class="project" style="display:block">
                   <h2>Homepage</h2>
                   <p>Featuring a sleek and modern design, This homepage offers a seamless user experience with an intuitive and well-organized content.</p>
-                  <p class="tech-stack">HTML, CSS, JavaScript</p><a href="../Home Page/index.html" target="_blank">LINK</a>
+                  <p class="tech-stack">HTML, CSS, JavaScript</p><a href="https://gantud.github.io/home-page/" target="_blank">LINK</a>
                 </div>
               
                 <div id="dinamicCar" class="project" style="display:none">
