--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <h2>A bit of me</h2>
         <p>Hi, I'm Genesis Perez Perez, a software developer with over 4 years of experience, i have passion for building and designing innovative solutions. I specialize in creating robust and elegant software that brings ideas to life.</p>
         <div class="social-icons">
-            <a href="https://github.com/gantud/burrow.git" target="_blank"><i class="fa fa-github"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://github.com/gantud?tab=repositories" target="_blank" title="Genesis Github"><i class="fa fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/genesis-perez-perez-8246a2287/" target="_blank" title="Genesis Linkedin"><i class="fa fa-linkedin"></i></a>
             <!-- More social links -->
         </div>
     </section>
