--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div id="dinamicCar" class="project" style="display:none">
                   <h2>Dinamic Car</h2>
                   <p>A straightforward and user-friendly page features a clean design with a simple layout for easy browsing. Add items to your shopping cart with an interactive JavaScript implementation.</p>
-                  <p class="tech-stack">HTML, CSS, JavaScript</p><a href="../Dynamic Car/cart dynamic/index.html" target="_blank">LINK</a>
+                  <p class="tech-stack">HTML, CSS, JavaScript</p><a href="https://gantud.github.io/dynamic-car/" target="_blank">LINK</a>
                 </div>
               
                 <div id="weatherApp" class="project" style="display:none">
