--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 </div>
               
                 <div id="weatherApp" class="project" style="display:none">
-                  <h2>Api Weather App</h2>
-                  <p></p>
-                  <p></p>
+                  <h2>Fetch Api Weather</h2>
+                  <p>Created a weather app using Tailwind CSS and Fetch API to display real-time weather data from different countries</p>
+                  <p class="tech-stack">JavaScript, Tailwind, Fetch API</p><a href="https://gantud.github.io/Fetch_API_weather/" target="_blank">LINK</a>
                 </div>
 
                 <div id="toDoList" class="project" style="display:none">
