--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h5 class="bar-item">PROJECTS</h5>
                 <button class="tablink tab-red" onclick="projectPorfolio(event, 'homepage')">Homepage</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'dinamicCar')">Dinamic Car</button>
-                <button class="tablink nocomplete" title="cooming soon" disabled onclick="projectPorfolio(event, 'weatherApp')">Api Weather App</button>
+                <button class="tablink" onclick="projectPorfolio(event, 'weatherApp')">Api Weather App</button>
                 <button class="tablink nocomplete" title="cooming soon" disabled onclick="projectPorfolio(event, 'toDoList')">To Do List</button>
             </div>
     
