--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <button class="tablink tab-red" onclick="projectPorfolio(event, 'homepage')">Homepage</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'dinamicCar')">Dinamic Car</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'weatherApp')">Api Weather App</button>
-                <button class="tablink nocomplete" title="cooming soon" disabled onclick="projectPorfolio(event, 'toDoList')">To Do List</button>
+                <button class="tablink" onclick="projectPorfolio(event, 'toDoList')">To Do List</button>
             </div>
     
               <div class="project-info">
@@ -90,13 +90,13 @@
                 <div id="weatherApp" class="project" style="display:none">
                   <h2>Fetch Api Weather</h2>
                   <p>Created a weather app using Tailwind CSS and Fetch API to display real-time weather data from different countries</p>
-                  <p class="tech-stack">JavaScript, Tailwind, Fetch API</p><a href="https://gantud.github.io/Fetch_API_weather/" target="_blank">LINK</a>
+                  <p class="tech-stack">JavaScript, Tailwind, HTML, Fetch API</p><a href="https://gantud.github.io/Fetch_API_weather/" target="_blank">LINK</a>
                 </div>
 
                 <div id="toDoList" class="project" style="display:none">
                     <h2>To Do List</h2>
-                    <p></p>
-                    <p></p>
+                    <p>This app allows users to create, edit, and delete tasks efficiently, with a clean and modern interface</p>
+                     <p class="tech-stack">React + Vite, JavaScript, Tailwind, HTML</p><a href="https://gantud.github.io/toDoList_react/" target="_blank">LINK</a>
                   </div>
               
               </div>
