--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- About Section -->
     <section class="about">
         <h2>A bit of me</h2>
-        <p>Hi, I'm Genesis Perez Perez, a software developer with over 4 years of experience, i have passion for building and designing innovative solutions. I specialize in creating robust and elegant software that brings ideas to life.</p>
+        <p>Hi, I'm Genesis Perez Perez, a software developer with over 4 years of experience, I have passion for building and designing innovative solutions. I specialize in creating robust and elegant software that brings ideas to life.</p>
         <div class="social-icons">
             <a href="https://github.com/gantud?tab=repositories" target="_blank" title="Genesis Github"><i class="fa fa-github"></i></a>
             <a href="https://www.linkedin.com/in/genesis-perez-perez-8246a2287/" target="_blank" title="Genesis Linkedin"><i class="fa fa-linkedin"></i></a>
