--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
                 </div>
               
                 <div id="dinamicCar" class="project" style="display:none">
-                  <h2>Dinamic Car</h2>
-                  <p>A straightforward and user-friendly page features a clean design with a simple layout for easy browsing. Add items to your shopping cart with an interactive JavaScript implementation.</p>
-                  <p class="tech-stack">HTML, CSS, JavaScript</p><a href="https://gantud.github.io/dynamic-car/" target="_blank">LINK</a>
+                  <h2>Dinamic Cart - React</h2>
+                  <p>This project is a modern web application built using React and Vite, featuring dynamic user interaction, local storage for persistent data, and custom styling with CSS. The application leverages JavaScript for logic implementation and user interface updates, ensuring a smooth and responsive user experience.</p><a href="https://gantud.github.io/dynamic_cart_REACT/" target="_blank">LINK</a>
                 </div>
               
                 <div id="weatherApp" class="project" style="display:none">
