--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="side-bar">
                 <h5 class="bar-item">PROJECTS</h5>
                 <button class="tablink tab-red" onclick="projectPorfolio(event, 'homepage')">Homepage</button>
-                <button class="tablink" onclick="projectPorfolio(event, 'dinamicCar')">Dinamic Car</button>
+                <button class="tablink" onclick="projectPorfolio(event, 'dinamicCar')">Dinamic Cart - React</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'weatherApp')">Api Weather App</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'toDoList')">To Do List</button>
             </div>
@@ -83,7 +83,7 @@
               
                 <div id="dinamicCar" class="project" style="display:none">
                   <h2>Dinamic Cart - React</h2>
-                  <p>This project is a modern web application built using React and Vite, featuring dynamic user interaction, local storage for persistent data, and custom styling with CSS. The application leverages JavaScript for logic implementation and user interface updates, ensuring a smooth and responsive user experience.</p><a href="https://gantud.github.io/dynamic_cart_REACT/" target="_blank">LINK</a>
+                  <p>Web application built using React and Vite, featuring dynamic user interaction, local storage for persistent data, and custom styling with CSS. </p> <p class="tech-stack">JavaScript, CSS, HTML, REAC+VITE, LocalStorage</p><a href="https://gantud.github.io/dynamic_cart_REACT/" target="_blank">LINK</a>
                 </div>
               
                 <div id="weatherApp" class="project" style="display:none">
