--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="side-bar">
                 <h5 class="bar-item">PROJECTS</h5>
                 <button class="tablink tab-red" onclick="projectPorfolio(event, 'homepage')">Homepage</button>
-                <button class="tablink" onclick="projectPorfolio(event, 'dinamicCar')">Dinamic Cart - React</button>
+                <button class="tablink" onclick="projectPorfolio(event, 'dinamicCar')">Dinamic Cart</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'weatherApp')">Api Weather App</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'toDoList')">To Do List</button>
             </div>
