--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p><a href="mailto:gantud.gennag@gmail.com">Contact: gantud.gennag@gmail.com</a></p>
+        <p><a href="mailto:genesis.perezp25134@gmail.com">Contact: genesis.perezp25134@gmail.com</a></p>
         <p>© 2024 Genesis Perez P. All rights reserved.</p>
     </footer>
 
