--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <h5 class="bar-item">PROJECTS</h5>
                 <button class="tablink tab-red" onclick="projectPorfolio(event, 'homepage')">Homepage</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'dinamicCar')">Dinamic Cart</button>
+		<button class="tablink" onclick="projectPorfolio(event, 'meetFur')">Meet Festival</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'weatherApp')">Api Weather App</button>
                 <button class="tablink" onclick="projectPorfolio(event, 'toDoList')">To Do List</button>
             </div>
@@ -85,7 +86,12 @@
                   <h2>Dinamic Cart - React</h2>
                   <p>Web application built using React and Vite, featuring dynamic user interaction, local storage for persistent data, and custom styling with CSS. </p> <p class="tech-stack">JavaScript, CSS, HTML, REAC+VITE, LocalStorage</p><a href="https://gantud.github.io/dynamic_cart_REACT/" target="_blank">LINK</a>
                 </div>
-              
+
+                <div id="meetFur" class="project" style="display:none">
+                  <h2>Gallery and Event</h2>
+                  <p>This project features an image gallery enhanced with various JS events for a dynamic user experience. Gulp was used to automate tasks like compiling SASS and optimizing assets </p> <p class="tech-stack">JavaScript, SASS, HTML, GULP</p><a href="https://gantud.github.io/eventMeet/" target="_blank">LINK</a>
+                </div>
+		      
                 <div id="weatherApp" class="project" style="display:none">
                   <h2>Fetch Api Weather</h2>
                   <p>Created a weather app using Tailwind CSS and Fetch API to display real-time weather data from different countries</p>
